# cim-domain-dialog

./: Cargo.toml  flake.nix  readme.md
doc/: api.md  user-stories.md
examples/: basic_conversation.rs  dialog_demo.rs  dialog_queries_demo.rs
src/: lib.rs
src/aggregate/: mod.rs
src/commands/: mod.rs
src/events/: mod.rs
src/handlers/: command_handler.rs  mod.rs
src/projections/: active_dialogs.rs  conversation_history.rs  dialog_view.rs  mod.rs  projection_updater.rs  simple_projection.rs
src/queries/: mod.rs
src/routing/: agent_router.rs  channel.rs  context_sharing.rs  mod.rs  strategies.rs
src/value_objects/: mod.rs
tests/: dialog_tests.rs  handler_tests.rs  integration_tests.rs
